==> Tujiayi/SocChina_2025_Bouffalo/our_project_bl616_a_non-invasive_blood_glucose_monitoring_system_based_on_the_fusion_of_multiple_sensors_and_AI/MAX30102/max30102.c <==
#include "max30102.h"
#include "bflb_mtimer.h"

void MAX30102_Init(void)
{
    gpio = bflb_device_get_by_name("gpio");

	bflb_gpio_init(gpio, MAX30102_INT_PIN, GPIO_INPUT | GPIO_PULLUP | GPIO_SMT_EN | GPIO_DRV_1);   //上拉输入模式

	MAX30102_IIC_Init();
	
	MAX30102_Reset();
	
//	max30102_Bus_Write(REG_MODE_CONFIG, 0x0b);  //mode configuration : temp_en[3]      MODE[2:0]=010 HR only enabled    011 SP02 enabled
//	max30102_Bus_Write(REG_INTR_STATUS_2, 0xF0); //open all of interrupt
//	max30102_Bus_Write(REG_INTR_STATUS_1, 0x00); //all interrupt clear
//	max30102_Bus_Write(REG_INTR_ENABLE_2, 0x02); //DIE_TEMP_RDY_EN
//	max30102_Bus_Write(REG_TEMP_CONFIG, 0x01); //SET   TEMP_EN

//	max30102_Bus_Write(REG_SPO2_CONFIG, 0x47); //SPO2_SR[4:2]=001  100 per second    LED_PW[1:0]=11  16BITS

//	max30102_Bus_Write(REG_LED1_PA, 0x47); 
//	max30102_Bus_Write(REG_LED2_PA, 0x47); 
	
	
	
	max30102_Bus_Write(REG_INTR_ENABLE_1,0xc0);	// INTR setting
	max30102_Bus_Write(REG_INTR_ENABLE_2,0x00);
	max30102_Bus_Write(REG_FIFO_WR_PTR,0x00);  	//FIFO_WR_PTR[4:0]
	max30102_Bus_Write(REG_OVF_COUNTER,0x00);  	//OVF_COUNTER[4:0]
	max30102_Bus_Write(REG_FIFO_RD_PTR,0x00);  	//FIFO_RD_PTR[4:0]
	max30102_Bus_Write(REG_FIFO_CONFIG,0x0f);  	//sample avg = 1, fifo rollover=false, fifo almost full = 17
	max30102_Bus_Write(REG_MODE_CONFIG,0x03);  	//0x02 for Red only, 0x03 for SpO2 mode 0x07 multimode LED
	max30102_Bus_Write(REG_SPO2_CONFIG,0x27);  	// SPO2_ADC range = 4096nA, SPO2 sample rate (100 Hz), LED pulseWidth (400uS)  
	max30102_Bus_Write(REG_LED1_PA,0x24);   	//Choose value for ~ 7mA for LED1
	max30102_Bus_Write(REG_LED2_PA,0x24);   	// Choose value for ~ 7mA for LED2
	max30102_Bus_Write(REG_PILOT_PA,0x7f);   	// Choose value for ~ 25mA for Pilot LED


}

void MAX30102_IIC_SDA_OUT(void)//SDA输出方向配置
{
	gpio = bflb_device_get_by_name("gpio");		
	bflb_gpio_init(gpio, MAX30102_IIC_SDA_PIN, GPIO_OUTPUT| GPIO_FLOAT| GPIO_SMT_EN | GPIO_DRV_1);				

}

void MAX30102_IIC_SDA_IN(void)//SDA输入方向配置
{
	gpio = bflb_device_get_by_name("gpio");		
	bflb_gpio_init(gpio, MAX30102_IIC_SDA_PIN, GPIO_INPUT| GPIO_PULLUP| GPIO_SMT_EN | GPIO_DRV_1);				
}

void MAX30102_IIC_Init(void)
{			
	gpio = bflb_device_get_by_name("gpio");
    printf("gpio output max30102\r\n");
    /* I2C0_SDA */
    bflb_gpio_init(gpio, MAX30102_IIC_SDA_PIN, GPIO_OUTPUT| GPIO_FLOAT | GPIO_SMT_EN | GPIO_DRV_1);
    /* I2C0_SCL */
    bflb_gpio_init(gpio, MAX30102_IIC_SCL_PIN, GPIO_OUTPUT| GPIO_FLOAT | GPIO_SMT_EN | GPIO_DRV_1);	     
 
	MAX30102_I2C_SCL_1();
	MAX30102_I2C_SDA_1();

}

 void MAX30102_IIC_Start(void)
{
	MAX30102_IIC_SDA_OUT();     //sda线输出
	MAX30102_I2C_SDA_1();	  	  
	MAX30102_I2C_SCL_1();
	bflb_mtimer_delay_us(4);
	MAX30102_I2C_SDA_0();//START:when CLK is high,DATA change form high to low 
	bflb_mtimer_delay_us(4);
	MAX30102_I2C_SCL_0();//钳住I2C总线，准备发送或接收数据 
}

void MAX30102_IIC_Stop(void)
{
	MAX30102_IIC_SDA_OUT();//sda线输出
	MAX30102_I2C_SCL_0();
	MAX30102_I2C_SDA_0();//STOP:when CLK is high DATA change form low to high
	bflb_mtimer_delay_us(4);
	MAX30102_I2C_SCL_1(); 
	MAX30102_I2C_SDA_1();//发送I2C总线结束信号
	bflb_mtimer_delay_us(4);							   	
}

uint8_t MAX30102_IIC_Wait_Ack(void)
{
	uint8_t ucErrTime=0;
	MAX30102_IIC_SDA_IN();      //SDA设置为输入
	MAX30102_I2C_SDA_1();bflb_mtimer_delay_us(1);	   
	MAX30102_I2C_SCL_1();bflb_mtimer_delay_us(1);	 
	while(MAX30102_I2C_SDA_READ())
	{
		ucErrTime++;
		if(ucErrTime>250)
		{
			MAX30102_IIC_Stop();
			return 1;
		}
	}
	MAX30102_I2C_SCL_0();//时钟输出0 	   
	return 0;  
}

void MAX30102_IIC_Ack(void)
{
	MAX30102_I2C_SCL_0();
	MAX30102_IIC_SDA_OUT();
	MAX30102_I2C_SDA_0();
	bflb_mtimer_delay_us(2);
	MAX30102_I2C_SCL_1();
	bflb_mtimer_delay_us(2);
	MAX30102_I2C_SCL_0();
}

void MAX30102_IIC_NAck(void)
{
	MAX30102_I2C_SCL_0();
	MAX30102_IIC_SDA_OUT();
	MAX30102_I2C_SDA_1();
	bflb_mtimer_delay_us(2);
	MAX30102_I2C_SCL_1();
	bflb_mtimer_delay_us(2);
	MAX30102_I2C_SCL_0();
}

void MAX30102_IIC_Send_Byte(uint8_t _ucByte)
{                        
    uint8_t i;
	MAX30102_IIC_SDA_OUT(); 
	MAX30102_I2C_SCL_0();

	/* 先发送字节的高位bit7 */
	for (i=0; i<8;i++)
	{
		if (_ucByte & 0x80)
		{
			MAX30102_I2C_SDA_1();
		}
		else
		{
			MAX30102_I2C_SDA_0();
		}
		bflb_mtimer_delay_us(2);
		MAX30102_I2C_SCL_1();
		bflb_mtimer_delay_us(2);
		MAX30102_I2C_SCL_0();
		if (i == 7)
		{
			MAX30102_I2C_SDA_1(); // 释放总线
		}
		_ucByte <<= 1;	/* 左移一个bit */
		bflb_mtimer_delay_us(2);
	}
}

uint8_t MAX30102_IIC_Read_Byte(unsigned char ack)
{
	unsigned char i,receive=0;
	MAX30102_IIC_SDA_IN();//SDA设置为输入
    for(i=0;i<8;i++ )
	{
        MAX30102_I2C_SCL_0(); 
        bflb_mtimer_delay_us(2);
		MAX30102_I2C_SCL_1();
        receive<<=1;
        if(MAX30102_I2C_SDA_READ())receive++;   
		bflb_mtimer_delay_us(1); 
    }					 
    if (!ack)
        MAX30102_IIC_NAck();//发送nACK
    else
        MAX30102_IIC_Ack(); //发送ACK   
    return receive;
}
