==> Sotiredagain/kst/HARDWARE/HeartRate-02/max30102.c <==
#include "max30102.h"
#include "delay.h"

void MAX30102_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

 	RCC_APB2PeriphClockCmd(MAX30102_INT_CLK,ENABLE);	
	GPIO_InitStructure.GPIO_Pin  = MAX30102_INT_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IPU;
 	GPIO_Init(MAX30102_INT_PORT, &GPIO_InitStructure);
	
	MAX30102_IIC_Init();
	
	MAX30102_Reset();
	
//	max30102_Bus_Write(REG_MODE_CONFIG, 0x0b);  //mode configuration : temp_en[3]      MODE[2:0]=010 HR only enabled    011 SP02 enabled
//	max30102_Bus_Write(REG_INTR_STATUS_2, 0xF0); //open all of interrupt
//	max30102_Bus_Write(REG_INTR_STATUS_1, 0x00); //all interrupt clear
//	max30102_Bus_Write(REG_INTR_ENABLE_2, 0x02); //DIE_TEMP_RDY_EN
//	max30102_Bus_Write(REG_TEMP_CONFIG, 0x01); //SET   TEMP_EN

//	max30102_Bus_Write(REG_SPO2_CONFIG, 0x47); //SPO2_SR[4:2]=001  100 per second    LED_PW[1:0]=11  16BITS

//	max30102_Bus_Write(REG_LED1_PA, 0x47); 
//	max30102_Bus_Write(REG_LED2_PA, 0x47); 
	
	
	
	max30102_Bus_Write(REG_INTR_ENABLE_1,0xc0);	// INTR setting
	max30102_Bus_Write(REG_INTR_ENABLE_2,0x00);
	max30102_Bus_Write(REG_FIFO_WR_PTR,0x00);  	//FIFO_WR_PTR[4:0]
	max30102_Bus_Write(REG_OVF_COUNTER,0x00);  	//OVF_COUNTER[4:0]
	max30102_Bus_Write(REG_FIFO_RD_PTR,0x00);  	//FIFO_RD_PTR[4:0]
	max30102_Bus_Write(REG_FIFO_CONFIG,0x0f);  	//sample avg = 1, fifo rollover=false, fifo almost full = 17
	max30102_Bus_Write(REG_MODE_CONFIG,0x03);  	//0x02 for Red only, 0x03 for SpO2 mode 0x07 multimode LED
	max30102_Bus_Write(REG_SPO2_CONFIG,0x27);  	// SPO2_ADC range = 4096nA, SPO2 sample rate (100 Hz), LED pulseWidth (400uS)  
	max30102_Bus_Write(REG_LED1_PA,0x24);   	//Choose value for ~ 7mA for LED1
	max30102_Bus_Write(REG_LED2_PA,0x24);   	// Choose value for ~ 7mA for LED2
	max30102_Bus_Write(REG_PILOT_PA,0x7f);   	// Choose value for ~ 25mA for Pilot LED


}

void MAX30102_IIC_SDA_OUT(void)//SDA输出方向配置
{
	GPIO_InitTypeDef GPIO_InitStructure;	
	
	GPIO_InitStructure.GPIO_Pin=MAX30102_IIC_SDA_PIN;
	GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode=GPIO_Mode_Out_PP;//SDA推挽输出
	GPIO_Init(MAX30102_IIC_PORT,&GPIO_InitStructure); 						

}

void MAX30102_IIC_SDA_IN(void)//SDA输入方向配置
{
	GPIO_InitTypeDef GPIO_InitStructure;	
	
	GPIO_InitStructure.GPIO_Pin=MAX30102_IIC_SDA_PIN;
	GPIO_InitStructure.GPIO_Speed=GPIO_Speed_50MHz;
	GPIO_InitStructure.GPIO_Mode=GPIO_Mode_IPU;//SCL上拉输入
	GPIO_Init(MAX30102_IIC_PORT,&GPIO_InitStructure);
	
}

void MAX30102_IIC_Init(void)
{					     
	GPIO_InitTypeDef GPIO_InitStructure;
	//RCC->APB2ENR|=1<<4;//先使能外设IO PORTC时钟 
	RCC_APB2PeriphClockCmd(	RCC_APB2Periph_GPIOC, ENABLE );	
	   
	GPIO_InitStructure.GPIO_Pin = MAX30102_IIC_SCL_PIN|MAX30102_IIC_SDA_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP ;   //推挽输出
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
	GPIO_Init(MAX30102_IIC_PORT, &GPIO_InitStructure);
 
	MAX30102_IIC_SCL(1);
	MAX30102_IIC_SDA(1);

}

void MAX30102_IIC_Start(void)
{
	MAX30102_IIC_SDA_OUT();     //sda线输出
	MAX30102_IIC_SDA(1);	  	  
	MAX30102_IIC_SCL(1);
	delay_us(4);
 	MAX30102_IIC_SDA(0);//START:when CLK is high,DATA change form high to low 
	delay_us(4);
	MAX30102_IIC_SCL(0);//钳住I2C总线，准备发送或接收数据 
}

void MAX30102_IIC_Stop(void)
{
	MAX30102_IIC_SDA_OUT();//sda线输出
	MAX30102_IIC_SCL(0);
	MAX30102_IIC_SDA(0);//STOP:when CLK is high DATA change form low to high
 	delay_us(4);
	MAX30102_IIC_SCL(1); 
	MAX30102_IIC_SDA(1);//发送I2C总线结束信号
	delay_us(4);							   	
}

u8 MAX30102_IIC_Wait_Ack(void)
{
	u8 ucErrTime=0;
	MAX30102_IIC_SDA_IN();      //SDA设置为输入  
	MAX30102_IIC_SDA(1);delay_us(1);	   
	MAX30102_IIC_SCL(1);delay_us(1);	 
	while(MAX30102_READ_SDA)
	{
		ucErrTime++;
		if(ucErrTime>250)
		{
			MAX30102_IIC_Stop();
			return 1;
		}
	}
	MAX30102_IIC_SCL(0);//时钟输出0 	   
	return 0;  
}

void MAX30102_IIC_Ack(void)
{
	MAX30102_IIC_SCL(0);
	MAX30102_IIC_SDA_OUT();
	MAX30102_IIC_SDA(0);
	delay_us(2);
	MAX30102_IIC_SCL(1);
	delay_us(2);
	MAX30102_IIC_SCL(0);
}

void MAX30102_IIC_NAck(void)
{
	MAX30102_IIC_SCL(0);
	MAX30102_IIC_SDA_OUT();
	MAX30102_IIC_SDA(1);
	delay_us(2);
	MAX30102_IIC_SCL(1);
	delay_us(2);
	MAX30102_IIC_SCL(0);
}

void MAX30102_IIC_Send_Byte(u8 txd)
{                        
    u8 t;   
	MAX30102_IIC_SDA_OUT(); 	    
    MAX30102_IIC_SCL(0);//拉低时钟开始数据传输
    for(t=0;t<8;t++)
    {              
				if((txd&0x80)>>7)
				{
					MAX30102_IIC_SDA(1);
				}
				else
				{
				MAX30102_IIC_SDA(0);
				}
        //MAX30102_IIC_SDA=(txd&0x80)>>7;
        txd<<=1; 	  
		delay_us(2);   //对TEA5767这三个延时都是必须的
		MAX30102_IIC_SCL(1);
		delay_us(2); 
		MAX30102_IIC_SCL(0);	
		delay_us(2);
    }	 
}

u8 MAX30102_IIC_Read_Byte(unsigned char ack)
{
	unsigned char i,receive=0;
	MAX30102_IIC_SDA_IN();//SDA设置为输入
    for(i=0;i<8;i++ )
	{
        MAX30102_IIC_SCL(0); 
        delay_us(2);
		MAX30102_IIC_SCL(1);
        receive<<=1;
        if(MAX30102_READ_SDA)receive++;   
		delay_us(1); 
    }					 
    if (!ack)
        MAX30102_IIC_NAck();//发送nACK
    else
        MAX30102_IIC_Ack(); //发送ACK   
    return receive;
}
